--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,14 +16,14 @@ dependencies:
   css_colors: ^1.0.2
 
   # Plugins for rendering the <video> tag.
-  video_player: ^0.10.11+2
-  chewie: ^0.9.10
+  # video_player: ^0.10.11+2
+  # chewie: ^0.9.10
 
   # Plugin for rendering the <iframe> tag.
   webview_flutter: ^1.0.0
 
   # Plugins for rendering the <audio> tag.
-  chewie_audio: ^1.0.0+1
+  # chewie_audio: ^1.0.0+1
 
   # Plugins for rendering the <svg> tag.
   flutter_svg: ^0.19.0
